--- a/index.html
+++ b/index.html
@@ -8,6 +8,52 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   
+    <header>
+        <div class="header-logo">Header Logo</div>
+        <div class="header-links">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </header>
+
+   <div class="body-one">
+    <h1>This website is awesome</h1>
+    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+    <button>Sign up</button>
+    <img>
+   </div>
+
+   <div class="body-two">
+    <h2>Some random information</h2>
+    <div class="illustration"></div>
+    <div class="text">this is some subtext under an illustration</div>
+    <div class="illustration"></div>
+    <div class="text">this is some subtext under an illustration</div>
+    <div class="illustration"></div>
+    <div class="text">this is some subtext under an illustration</div>
+    <div class="illustration"></div>
+    <div class="text">this is some subtext under an illustration</div>
+   </div>
+
+   <div class="body-three">
+    <div class="quote">This is an inspiring quote or a testiomnial from a customer. Maybe it's just filling up stpace or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="quote-name">-Thor, God of Thunder</div>
+   </div>
+
+   <div class="body-four">
+    <div class="container-four">
+        <h1>Call to action! It's time!</h1>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign Up</button>
+    </div>
+   </div>
+
+   <footer>
+    <div class="copywrite">Copyright The Odin Project 2023</div>
+    </footer>
+
 </body>
 </html>
