--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header-logo">Header Logo</div>
         <div class="header-links">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="_blank">header link one</a></li>
+                <li><a href="_blank">header link two</a></li>
+                <li><a href="_blank">header link three</a></li>
             </ul>
         </div>
     </header>
@@ -28,6 +28,7 @@
 
    <div class="body-two">
     <h2>Some random information</h2>
+    <div class="items">
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
     <div class="illustration"></div>
@@ -36,7 +37,8 @@
     <div class="text">this is some subtext under an illustration</div>
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
-   </div>
+    </div>  
+    </div>
 
    <div class="body-three">
     <div class="quote">This is an inspiring quote or a testiomnial from a customer. Maybe it's just filling up stpace or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
