--- a/index.html
+++ b/index.html
@@ -12,46 +12,62 @@
         <div class="header-logo">Header Logo</div>
         <div class="header-links">
             <ul>
-                <li><a href="_blank">header link one</a></li>
-                <li><a href="_blank">header link two</a></li>
-                <li><a href="_blank">header link three</a></li>
+                <li><a href="#"">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
     </header>
 
+<div class="content">
    <div class="body-one">
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <button>Sign up</button>
-    <img>
-   </div>
+    <div class="one-left">
+    <div class="website">This website is awesome</div>
+    <div class="one-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+    <button class="b1">Sign up</button>
+    </div>
+    <div class="one-right">
+    <div class="placeholder">this is a placeholder for an image</div>
+    </div>
+</div>
 
    <div class="body-two">
-    <h2>Some random information</h2>
+    <div class="items-title">Some random information</div>
     <div class="items">
+    <div class="info">
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
+    </div>
+    <div class="info">
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
+    </div>
+    <div class="info">
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
+    </div>
+    <div class="info">
     <div class="illustration"></div>
     <div class="text">this is some subtext under an illustration</div>
+    </div>
     </div>  
     </div>
 
    <div class="body-three">
-    <div class="quote">This is an inspiring quote or a testiomnial from a customer. Maybe it's just filling up stpace or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="quote">This is an inspiring quote or a testiomnial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
     <div class="quote-name">-Thor, God of Thunder</div>
    </div>
 
    <div class="body-four">
     <div class="container-four">
+        <div class="call-to-action">
         <h1>Call to action! It's time!</h1>
         <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign Up</button>
+        <button class="b2">Sign Up</button>
+        </div>
     </div>
    </div>
+</div>
 
    <footer>
     <div class="copywrite">Copyright The Odin Project 2023</div>
