--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
    <div class="body-four">
     <div class="container-four">
         <div class="call-to-action">
+        <div class="call-left">
         <h1>Call to action! It's time!</h1>
         <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="call-right">
         <button class="b2">Sign Up</button>
+        </div>
         </div>
     </div>
    </div>
